Bug 501950 - Crashes in ChatDocumentHandler::ChatDocumentHandler lambda function when editing a message
Summary: Crashes in ChatDocumentHandler::ChatDocumentHandler lambda function when edit...
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-03-24 18:00 UTC by Nate Graham
Modified: 2025-05-15 17:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Crash log (27.90 KB, text/plain)
2025-03-24 18:00 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-03-24 18:00:45 UTC
Created attachment 179702 [details]
Crash log

Today's git master.


STEPS TO REPRODUCE
1. Send a message
2. Hover over the message and click the pencil button


OBSERVED RESULT
App crashes. Relevant part of the backtrace:

#5  QQuickTextDocumentPrivate::document (this=Python Exception <class 'gdb.MemoryError'>: Cannot access memory at address 0x8
#6  QQuickTextDocument::textDocument (this=0x0)
    at /usr/src/debug/qt6-qtdeclarative-6.8.2-1.fc41.x86_64/src/quick/items/qquicktextdocument.cpp:467
#7  0x000000000057d670 in operator() (__closure=<optimized out>)
    at /home/nate/kde/src/neochat/src/chatdocumenthandler.cpp:120

Full backtrace attached as a file since it's huge and looks mostly irrelevant.


EXPECTED RESULT
I can edit the message.
Comment 1 Bug Janitor Service 2025-05-05 14:13:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/2252
Comment 2 James Graham 2025-05-05 14:45:54 UTC
Git commit 97d5be9d81c3bb32014721c857f35ad10ea71054 by James Graham.
Committed on 05/05/2025 at 14:45.
Pushed by nvrwhere into branch 'master'.

Make sure that ChatDocumentHandler can handle the document being changed to a nullptr

Make sure that ChatDocumentHandler can handle the document being changed to a nullptr.

M  +4    -0    src/libneochat/chatdocumenthandler.cpp

https://invent.kde.org/network/neochat/-/commit/97d5be9d81c3bb32014721c857f35ad10ea71054
Comment 3 Joshua Goins 2025-05-15 17:38:31 UTC
Git commit 2a2d469d7d5e9f0258cdd35afc5a82d11cc3c358 by Joshua Goins.
Committed on 14/05/2025 at 22:11.
Pushed by redstrate into branch 'release/25.04'.

Make sure that ChatDocumentHandler can handle the document being changed to a nullptr

Make sure that ChatDocumentHandler can handle the document being changed to a nullptr.


(cherry picked from commit 97d5be9d81c3bb32014721c857f35ad10ea71054)

3f287b20 Make sure that ChatDocumentHandler can handle the document being changed to a nullptr.

Co-authored-by: James Graham <james.h.graham@protonmail.com>

M  +4    -0    src/chatdocumenthandler.cpp

https://invent.kde.org/network/neochat/-/commit/2a2d469d7d5e9f0258cdd35afc5a82d11cc3c358