Make sure that ChatDocumentHandler can handle the document being changed to a nullptr

Make sure that ChatDocumentHandler can handle the document being changed to a nullptr.

BUG: 501950